# pr-generator

./: .gitignore  README.md  pyproject.toml
a2a/: .env_sample  README.md  hierarchical_server.py  server.py
config/: mcp_servers.yaml  pr_analyzer_config.yaml  security.yaml  server.yaml  workflows.yaml
config/environments/: development.yaml  production.yaml
crewai_approach/: # parse_crew_log_enhanced.py  README.md  __init__.py  crew.py  fix_json.py  hierarchical_run_crew.py  main.py  parse_crew_log.py  process.py  run_crew_pr.py  test_batch_processor.py  test_json_cleaning.py  test_toolchain.py  test_tools.py
crewai_approach/config/: agents.yaml  tasks.yaml
crewai_approach/models/: agent_models.py  batching_models.py
crewai_approach/pr_generator/: README.md  pyproject.toml
crewai_approach/pr_generator/src/pr_generator/: crew.py  execution_tracker.py  main.py  test_data_passing.py  test_pr_generator_crewai.py  test_tools.py
crewai_approach/pr_generator/src/pr_generator/config/: agents.yaml  tasks.yaml
crewai_approach/pr_generator/src/pr_generator/tools/: git_tools.py  grouping_tool.py  pr_strategy_tools.py  validation_tools.py
crewai_approach/pr_generator/tests/: test_grouping_tool.py
crewai_approach/tools/: base_tool.py  base_tools.py  batch_processor_tool.py  batch_splitter_tool.py  directory_analyzer.py  directory_analyzer_tool.py  file_grouper.py  file_grouper_tool.py  group_merging_tool.py  group_refiner.py  group_refiner_tool.py  group_validator.py  group_validator_tool.py  grouping_strategy_selector.py  grouping_strategy_selector_tool.py  pattern_analyzer.py  pattern_analyzer_tool.py  repo_analyzer.py  repo_analyzer_tool.py  repo_metrics.py  repo_metrics_tool.py
docs/approaches/: hierarchical_crew_approach.md  implementation_approach.md
docs/architecture/: agentic_design.md
docs/user_stories/: epics.md  hierarchical_pr_grouping.md  implementation_approach.md  user_stories.md  user_stories_analysis.md
embeddings/: README.md  repo_similarity_analyzer.py
llm_guided_approach/: README.md  __init__.py  llm_service.py  main.py
llm_guided_approach/generators/: description_generator.py  file_grouper.py  file_grouper_with_embeddings.py  group_manager.py  pr_generator.py
mcp_servers/: README.md
shared/: __init__.py  git_operations.py
tf_idf/: README.md  tf_idf.py
(+45 files in other folders)
