[project]
name = "pr_generator"
version = "0.1.0"
description = "pr_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
pr_generator = "pr_generator.main:run"
run_crew = "pr_generator.main:run"
train = "pr_generator.main:train"
replay = "pr_generator.main:replay"
test = "pr_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
